cif/org.eclipse.escet.cif.tests/tests/plcgen/prechecker_array_vs_list.cif.iec.err
WARNING: File "plcgen/prechecker_array_vs_list.cif": Semantic warning at line 21, column 5: The type "list[0] int" of algebraic variable "empty_list" allows only one value. Use a constant instead of the algebraic variable.
ERROR: CIF PLC code generator failed due to unsatisfied preconditions:

  ------------------------------------
  (1/2) A non-array list type is used.
  ------------------------------------
   * In algebraic variable "l":
     - alg list int l = [1, 2];
           ^

  ---------------------------------------------------------------------------------
  (2/2) Array type of an algebraic variable allows arrays with less than 1 element.
  ---------------------------------------------------------------------------------
   * In algebraic variable "empty_list":
     - alg list[0] int empty_list = <list[0] int>[];
           ^
